# rust-snippets

./: Cargo.toml  LICENSE  readme.md
advanced_rust/: Cargo.toml
advanced_rust/src/: main.rs
arcmutex_practice/: Cargo.toml
arcmutex_practice/src/: main.rs
audio-playground/: Cargo.toml
audio-playground/src/: main.rs  main2.rs
audio-stream/: Cargo.toml  readme.md
audio-stream/src/: main.rs  main2.rs
datastructure_library/: Cargo.toml
datastructure_library/src/: main.rs
devices-enumerate/: Cargo.toml
devices-enumerate/src/: main.rs
directory_program/: Cargo.toml
directory_program/src/: foo.rs  main.rs
directory_program/src/foo/: bar.rs
hashmap_practice/: Cargo.toml
hashmap_practice/src/: main.rs
hello_world/src/: main.rs
image_compression_lib/: Cargo.toml
image_compression_lib/src/: main.rs
imgtool/: Cargo.toml
imgtool/src/: main.rs
playground/: test.txt
playground/src/: lib.rs  main.rs
playground/tests/: test_word_count.rs
playing_traits/: Cargo.toml
playing_traits/src/: lib.rs
simple_server_arc_hashmap/: Cargo.toml
simple_server_arc_hashmap/src/: main.rs  store.rs
task_manager/: Cargo.toml
task_manager/src/: main.rs
tictac_toe/: Cargo.toml
tictac_toe/src/: main.rs
todo/src/: main.rs
tokio-practice/: Cargo.toml
tokio-practice/src/: main.rs
video-player/: Cargo.toml
video-player/src/: main.rs
voice-call/: Cargo.toml
voice-call/src/: main.rs
websocket-client/: Cargo.toml
websocket-client/src/: main.rs  main2.rs
websocket-practice/: Cargo.toml
websocket-server/: Cargo.toml
websocket-server/src/: main.rs  main2.rs
websocket-streamaudio/: Cargo.toml
websocket-streamaudio/src/: main.rs  main2.rs  websocket_server.rs
word-counter/: Cargo.toml
