[workspace]
members = [
	"advanced_rust",
	"arcmutex_practice",
	"audio-stream",
	"devices-enumerate",
	"directory_program",
	"hashmap_practice",
	"hello_world",
	"imgtool",
	"playground",
	"simple_server_arc_hashmap",
	"tictac_toe",
	"todo",
	"tokio-practice",
	"websocket-client",
	"websocket-server",
	"websocket-streamaudio",
	"word-counter",
	"playing_traits",
	"task_manager",
	"datastructure_library",
	"image_compression_lib"
]
