[package]
name = "voice-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.0"
anyhow = "1.0.65"
clap = "4.0.15"
hound = "3.5.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.11" }
futures = "0.3.24"
tokio-tungstenite = "0.17.2"
