[package]
name = "websocket-streamaudio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = "0.17.2"
cpal = "0.14.0"
anyhow = "1.0.65"
clap = "4.0.15"
hound = "3.5.0"
